# AEB-Academic-Evolutionary-Biosphere

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GIT_PUBLISH.md  INSTALL.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  app.py  config.yaml  install.bat  pyproject.toml  requirements-ai.txt  requirements.txt  run.bat  run.sh  selfcheck.py  smoke_test.py
docs/: AI_BACKENDS.md  ARCHITECTURE.md  DATA_FORMATS.md  METHODOLOGY.md  PAGES.md  ROADMAP.md  SAFETY.md
docs/manuals/: AEB_Technical_Manual_v2_0_text.md
examples/: sample_academic_corpus.txt  sample_bilingual_notes.md
pages/: 01_evolution_tree.py  02_neuron_graph.py  03_fossil_layers.py  04_extinction_sim.py  05_fitness_curve.py  06_migration_path.py  07_origin_trace.py  08_carbon_sink.py  09_niche_cluster.py  10_sedimentation.py  11_fossil_report.py  12_niche_hierarchy.py  13_collection.py
utils/: __init__.py  aeb_model.py  chart_theme.py  data_engine.py  export_utils.py  file_parser.py  i18n.py  threejs_components.py
